--- a/src/component/Shop/Shop.css
+++ b/src/component/Shop/Shop.css
@@ -2,3 +2,12 @@
      display: grid;
      grid-template-columns: 4fr 1fr;
 }
+.products-container{
+     margin-top: 20px;
+     display: grid;
+     grid-template-columns: repeat(3, 1fr);
+     gap: 20px;
+}
+.cart-container h4{
+     border: 1px solid red;
+}
