--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -1,5 +1,6 @@
 .product{
      width: 300px;
+     
      /* height: 500px; */
      margin: 0 auto;
      
@@ -11,9 +12,9 @@
 }
 .product img{
      width: 100%;
+     height:auto;
      border-radius: 10px 10px 0 0;
-     
-       
+   
 }
 .description{
      padding: 10px;
@@ -29,6 +30,7 @@
      bottom: 0px;
      background-color: rgba(248, 188, 76, 0.589);
      border-radius: 0 0 10px 10px;
+     cursor: pointer;
 }
 .product button:hover{
      background-color: orange;
